--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "webpack-dev-server --config config/webpack.config.js",
     "build": "rimraf dist && NODE_ENV=production webpack --config config/webpack.config.js",
     "lint": "eslint --fix \"client/**/*.+(ts|tsx|js|jsx)\"",
-    "prettier-test": "prettier --check \"client/**/*.+(ts|tsx|js|jsx)\"",
-    "prettier": "prettier --write \"client/**/*.+(ts|tsx|js|jsx)\"",
+    "prettier-test": "prettier --check \"{config,client}/**/*.+(ts|tsx|js|jsx)\"",
+    "prettier": "prettier --write \"{config,client}/**/*.+(ts|tsx|js|jsx)\"",
     "test": "npm run prettier-test && npm run lint"
   },
   "keywords": [
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
