--- a/development.ini
+++ b/development.ini
@@ -26,9 +26,17 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
-
+sqlalchemy.url = postgresql:///pyramidtest
 webpack-dev-server = true
 
+[pshell]
+setup = api.pshell.setup
+
+[alembic]
+# path to migration scripts
+script_location = api/alembic
+file_template = %%(year)d%%(month).2d%%(day).2d_%%(rev)s
+# file_template = %%(rev)s_%%(slug)s
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
