add json serializer to base class to serialize model on request

--- a/development.ini
+++ b/development.ini
@@ -29,8 +29,18 @@ pyramid.includes =
 sqlalchemy.url = postgresql:///pyramidtest
 webpack-dev-server = true
 
+retry.attempts = 3
+
+# By default, the toolbar only appears for clients from IP addresses
+# '127.0.0.1' and '::1'.
+# debugtoolbar.hosts = 127.0.0.1 ::1
+
 [pshell]
 setup = api.pshell.setup
+
+###
+# wsgi server configuration
+###
 
 [alembic]
 # path to migration scripts
@@ -38,29 +48,17 @@ script_location = api/alembic
 file_template = %%(year)d%%(month).2d%%(day).2d_%%(rev)s
 # file_template = %%(rev)s_%%(slug)s
 
-# By default, the toolbar only appears for clients from IP addresses
-# '127.0.0.1' and '::1'.
-# debugtoolbar.hosts = 127.0.0.1 ::1
-
-###
-# wsgi server configuration
-###
-
-#[server:main]
-#use = egg:waitress#main
-#listen = 127.0.0.1:6543 [::1]:6543
-
 [server:main]
 use = egg:waitress#main
 listen = localhost:6543
 
 ###
 # logging configuration
-# http://docs.pylonsproject.org/projects/pyramid/en/1.8-branch/narr/logging.html
+# https://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
 ###
 
 [loggers]
-keys = root, pyramidvue
+keys = root, api, sqlalchemy
 
 [handlers]
 keys = console
@@ -72,10 +70,18 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_pyramidvue]
+[logger_api]
 level = DEBUG
 handlers =
-qualname = pyramidvue
+qualname = api
+
+[logger_sqlalchemy]
+level = WARN
+handlers =
+qualname = sqlalchemy.engine
+# "level = INFO" logs SQL queries.
+# "level = DEBUG" logs SQL queries and results.
+# "level = WARN" logs neither.  (Recommended for production systems.)
 
 [handler_console]
 class = StreamHandler
