--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.1.4",
+    "@types/moment": "^2.13.0",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router": "^5.1.4",
@@ -51,6 +52,7 @@
     "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "moment": "^2.24.0",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
     "react-apollo": "^3.1.3",
@@ -60,6 +62,7 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
     "styled-components": "^5.0.1",
+    "svg-url-loader": "^4.0.0",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
@@ -68,8 +71,11 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@svgr/webpack": "^5.2.0",
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
+    "babel-plugin-named-asset-import": "^0.3.6",
+    "babel-preset-react-app": "^9.1.1",
     "graphql": "^14.6.0"
   }
 }
